feat: Add CSV import/export for inventory management
- CSV import parses headers, handles quoted values, skips comments
- CSV export for editing in Excel/Google Sheets
- Clear inventory option for fresh imports
- Settings page reorganized with CSV as primary option
- Starter inventory CSV with ~150 common RV items

--- a/public/index.html
+++ b/public/index.html
@@ -333,9 +333,17 @@
         </div>
 
         <div class="settings-section">
-          <h3>Data</h3>
-          <button id="export-btn" class="btn btn-secondary">Export Data</button>
-          <button id="import-btn" class="btn btn-secondary">Import Data</button>
+          <h3>Import/Export</h3>
+          <p class="settings-hint">CSV format works with Excel, Google Sheets, or any text editor</p>
+          <button id="import-csv-btn" class="btn btn-primary">Import from CSV</button>
+          <button id="export-csv-btn" class="btn btn-secondary">Export to CSV</button>
+          <button id="clear-inventory-btn" class="btn btn-danger">Clear All Items</button>
+        </div>
+
+        <div class="settings-section">
+          <h3>JSON Backup</h3>
+          <button id="export-btn" class="btn btn-secondary">Export JSON</button>
+          <button id="import-btn" class="btn btn-secondary">Import JSON</button>
         </div>
 
         <div class="settings-section">
