feat: Add visual emoji icon picker for inventory items
- Replace text input with clickable icon picker button
- Add modal with 130+ camping/travel-relevant emojis
- Organized by category: camping, vehicles, clothing, kitchen,
  electronics, toiletries, pets, tools, bedding, documents,
  safety, nature, activities
- Shows current icon in button, highlights selected in picker

--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,12 @@
             </div>
             <div class="form-group half">
               <label for="item-icon">Icon</label>
-              <input type="text" id="item-icon" placeholder="emoji">
+              <div class="icon-picker-wrapper">
+                <button type="button" id="icon-picker-btn" class="icon-picker-btn" onclick="inventory.showIconPicker()">
+                  <span id="selected-icon">📦</span>
+                </button>
+                <input type="hidden" id="item-icon">
+              </div>
             </div>
           </div>
 
@@ -419,6 +424,18 @@
       <div class="modal-actions">
         <button class="btn btn-secondary" onclick="app.closeQuickEdit()">Cancel</button>
         <button class="btn btn-primary" onclick="app.saveQuickEdit()">Save</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Icon Picker Modal -->
+  <div id="icon-picker-modal" class="modal hidden">
+    <div class="modal-backdrop" onclick="inventory.closeIconPicker()"></div>
+    <div class="modal-content icon-picker-content">
+      <h3>Choose Icon</h3>
+      <div class="icon-picker-grid" id="icon-picker-grid"></div>
+      <div class="modal-actions">
+        <button class="btn btn-secondary" onclick="inventory.closeIconPicker()">Cancel</button>
       </div>
     </div>
   </div>
