feat: Add searchable icon picker with 500+ emojis
- Search bar filters icons by keywords (e.g., "camp", "coffee", "dog")
- Expanded icon library from ~130 to 500+ categorized emojis
- Auto-focus on search input when picker opens
- Shows "No matching icons" message when search has no results

--- a/public/index.html
+++ b/public/index.html
@@ -433,6 +433,9 @@
     <div class="modal-backdrop" onclick="inventory.closeIconPicker()"></div>
     <div class="modal-content icon-picker-content">
       <h3>Choose Icon</h3>
+      <div class="icon-search-wrapper">
+        <input type="search" id="icon-search" placeholder="Search icons..." autocomplete="off">
+      </div>
       <div class="icon-picker-grid" id="icon-picker-grid"></div>
       <div class="modal-actions">
         <button class="btn btn-secondary" onclick="inventory.closeIconPicker()">Cancel</button>
