--- a/public/index.html
+++ b/public/index.html
@@ -205,6 +205,9 @@
             <button type="button" class="btn btn-secondary" data-action="cancel">Cancel</button>
             <button type="submit" class="btn btn-primary">Save Item</button>
           </div>
+          <div id="delete-item-section" class="form-delete-section hidden">
+            <button type="button" class="btn btn-danger" onclick="inventory.confirmDeleteItem()">Delete Item</button>
+          </div>
         </form>
       </section>
 
